welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:21: error: value VERT is not a member of object java.awt.Color
			faireV(Color.VERT)
                                     ^PatternPicture:22: error: value JAUNE is not a member of object java.awt.Color
			faireV(Color.JAUNE)
                                     ^